--- a/lab/semana2/CMakeLists.txt
+++ b/lab/semana2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(semana2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(semana2 main.cpp)
+add_executable(semana2 main.cpp Figura.h Elipse.h Rectangulo.h)
