--- a/lab/semana3_templates_1/CMakeLists.txt
+++ b/lab/semana3_templates_1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(semana3_templates)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(semana3_templates main.cpp)
+add_executable(semana3_templates main.cpp funciones.h)
