--- a/lab/semana3_templates_1/CMakeLists.txt
+++ b/lab/semana3_templates_1/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
-project(semana3_templates)
+project(semana3_templates_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(semana3_templates main.cpp)
+add_executable(semana3_templates_1 main.cpp)
