--- a/tareas/tarea_2/CMakeLists.txt
+++ b/tareas/tarea_2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(tarea_2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(tarea_2 main.cpp)
+add_executable(tarea_2 main.cpp P1.cpp P2.cpp P3.cpp P4.cpp P5.cpp P6.cpp P7.cpp P8.cpp P9.cpp P10.cpp)
