--- a/lab/s5_STL_containers_secuenciales/CMakeLists.txt
+++ b/lab/s5_STL_containers_secuenciales/CMakeLists.txt
@@ -3,4 +3,4 @@ project(s5_STL_contenedores)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(s5_STL_contenedores main.cpp)
+add_executable(s5_STL_contenedores main.cpp functions.h)
