--- a/tareas/tarea_3/CMakeLists.txt
+++ b/tareas/tarea_3/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 project(tarea_3)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(tarea_3 main.cpp P1.cpp P1.h P2.cpp P2.h)
+add_executable(tarea_3 main.cpp p1.cpp p1.h p2.cpp p2.h p3.cpp p3.h p4.cpp p4.h p5.cpp p5.h p6.cpp p6.h p7.cpp p7.h p8.cpp p8.h p9.cpp p9.h)
