--- a/lab/s6_iterators/CMakeLists.txt
+++ b/lab/s6_iterators/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
-project(s6_callables)
+project(s6_iterators)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(s6_callables main.cpp)
+add_executable(s6_iterators main.cpp)
