--- a/lab/s7_algorithm_complexity/CMakeLists.txt
+++ b/lab/s7_algorithm_complexity/CMakeLists.txt
@@ -3,4 +3,4 @@ project(s7_algorithm_complexity)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(s7_algorithm_complexity main.cpp)
+add_executable(s7_algorithm_complexity main.cpp sp4.cpp sp4.h)
